[package]
name = "env_logger"
version = "0.5.3" # remember to update html_root_url
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/sebasmagri/env_logger/"
documentation = "https://docs.rs/env_logger"
description = """
A logging implementation for `log` which is configured via an environment
variable.
"""
categories = ["development-tools::debugging"]
keywords = ["logging", "log", "logger"]

[dependencies]
log = { version = "0.4.0", default-features = false, features = ["std"], path = "../log" }
regex = { version = "0.2", optional = true }
termcolor = "0.3"
chrono = "0.4"
atty = "0.2"
serde = { version = "1", optional = true }

[[test]]
name = "regexp_filter"
harness = false

[[test]]
name = "log-in-log"
harness = false

[features]
default = ["regex", "structured"]
structured = ["serde", "log/serde"]
